--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,6 +105,7 @@
         <activity android:name=".ui.activity.YlzpActivity"/>
         <activity android:name=".ui.activity.ResumeManagementActivity"/>
         <activity android:name=".ui.activity.InvitationInterviewActivity"/>
+        <activity android:name="com.netease.nim.uikit.session.activity.P2PMessageActivity"/>
 
         <service
             android:name="com.baidu.location.f"
