--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,9 @@ android {
             //设置支持的SO库架构
             abiFilters "armeabi-v7a", "x86","arm64-v8a","x86_64"
         }
+        multiDexEnabled true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -37,6 +39,10 @@ android {
             }
         }
     }
+    packagingOptions {
+        exclude 'assets/nim_keystore2'
+
+    }
 }
 
 
@@ -55,7 +61,7 @@ dependencies {
     compile project(':zuoni-common')
     compile 'com.jaeger.statusbarutil:library:1.4.0'
     compile 'com.google.code.gson:gson:2.8.2'
-        compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     //    compile 'com.github.bumptech.glide:glide:4.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
     compile 'com.jakewharton:butterknife:8.8.1'
@@ -72,11 +78,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.androidkun:XTabLayout:1.1.3'
     // 基础功能 (必需)
-    compile 'com.netease.nimlib:basesdk:3.3.0'
+//    compile 'com.netease.nimlib:basesdk:3.3.0'
     // 音视频需要
-    compile 'com.netease.nimlib:avchat:3.3.0'
+//    compile 'com.netease.nimlib:avchat:3.3.0'
     // 聊天室需要
-    compile 'com.netease.nimlib:chatroom:3.3.0'
+//    compile 'com.netease.nimlib:chatroom:3.3.0'
     // 实时会话服务需要
-    compile 'com.netease.nimlib:rts:3.3.0'
+//    compile 'com.netease.nimlib:rts:3.3.0'
+    compile project(':uikit')
 }
