--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,13 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+ext {
+    compileSdkVersion = 25
+    buildToolsVersion = '25.0.3'
+    minSdkVersion = 14
+    targetSdkVersion = 25
+    versionCode = 39
+    versionName = '4.3.0'
+    targetCompatibility = 1.7
+    sourceCompatibility = 1.7
+}
