--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,10 @@ dependencies {
     // 实时会话服务需要
 //    compile 'com.netease.nimlib:rts:3.3.0'
     compile project(':uikit')
+
+
+    //图片选择器
+    compile 'com.jph.takephoto:takephoto_library:4.0.3'
+    //鲁班
+    compile 'top.zibin:Luban:1.1.3'
 }
