--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,17 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <!-- 这个权限用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <!-- 这个权限用于访问GPS定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <!-- SD卡读取权限，用户写入离线定位数据-->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
 
     <!-- 权限声明 -->
@@ -34,32 +34,33 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <!-- 外置存储存取权限 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- 多媒体相关 -->
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <!-- 如果需要实时音视频通话模块，下面的权限也是必须的。否则，可以不加 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <!-- SDK 权限申明, 第三方 APP 接入时，请将 com.netease.nim.demo 替换为自己的包名 -->
     <!-- 和下面的 uses-permission 一起加入到你的 AndroidManifest 文件中。 -->
     <permission
         android:name="com.zuoni.zxqy.permission.RECEIVE_MSG"
-        android:protectionLevel="signature"/>
+        android:protectionLevel="signature" />
     <!-- 接收 SDK 消息广播权限， 第三方 APP 接入时，请将 com.netease.nim.demo 替换为自己的包名 -->
-    <uses-permission android:name="com.zuoni.zxqy.permission.RECEIVE_MSG"/>
-
-
+    <uses-permission android:name="com.zuoni.zxqy.permission.RECEIVE_MSG" />
 
 
     <application
@@ -71,14 +72,14 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name=".ui.activity.LoginActivity">
+        <activity android:name=".ui.activity.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.CompanyAddressActivity" />
         <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.RegisterActivity" />
@@ -91,21 +92,22 @@
         <activity android:name=".ui.activity.InvitationInterviewRecordActivity" />
         <activity android:name=".ui.activity.PositionManagementActivity" />
         <activity android:name=".ui.activity.SettingsActivity" />
-        <activity android:name=".ui.activity.settings.OtherFunctionsActivity"/>
-        <activity android:name=".ui.activity.settings.ModifyDataActivity"/>
-        <activity android:name=".ui.activity.settings.ModifyPasswordActivity"/>
-        <activity android:name=".ui.activity.settings.ContactManagerActivity"/>
-        <activity android:name=".ui.activity.settings.ContactActivity"/>
-        <activity android:name=".ui.activity.settings.EssentialInformationActivity"/>
-        <activity android:name=".ui.activity.settings.AccountInformationActivity"/>
-        <activity android:name=".ui.activity.HomePreviewActivity"/>
-        <activity android:name=".ui.activity.OnlineComplaintsActivity"/>
+        <activity android:name=".ui.activity.settings.OtherFunctionsActivity" />
+        <activity android:name=".ui.activity.settings.ModifyDataActivity" />
+        <activity android:name=".ui.activity.settings.ModifyPasswordActivity" />
+        <activity android:name=".ui.activity.settings.ContactManagerActivity" />
+        <activity android:name=".ui.activity.settings.ContactActivity" />
+        <activity android:name=".ui.activity.settings.EssentialInformationActivity" />
+        <activity android:name=".ui.activity.settings.AccountInformationActivity" />
+        <activity android:name=".ui.activity.HomePreviewActivity" />
+        <activity android:name=".ui.activity.OnlineComplaintsActivity" />
         <activity android:name=".ui.activity.CompanyProfileActivity" />
-        <activity android:name=".ui.activity.PersonalInformationActivity"/>
-        <activity android:name=".ui.activity.YlzpActivity"/>
-        <activity android:name=".ui.activity.ResumeManagementActivity"/>
-        <activity android:name=".ui.activity.InvitationInterviewActivity"/>
-        <activity android:name="com.netease.nim.uikit.session.activity.P2PMessageActivity"/>
+        <activity android:name=".ui.activity.PersonalInformationActivity" />
+        <activity android:name=".ui.activity.YlzpActivity" />
+        <activity android:name=".ui.activity.ResumeManagementActivity" />
+        <activity android:name=".ui.activity.InvitationInterviewActivity" />
+        <activity android:name="com.netease.nim.uikit.session.activity.P2PMessageActivity" />
+        <activity android:name=".ui.activity.settings.ModifyPhoneActivity"/>
 
         <service
             android:name="com.baidu.location.f"
@@ -121,8 +123,6 @@
             android:value="tbzyNGIGj7th79uQfgvkKF5CGyTq1yx9" />
 
 
-
-
         <!--网易云信配置-->
 
         <!-- APP key, 可以在这里设置，也可以在 SDKOptions 中提供。
@@ -134,55 +134,54 @@
         <!-- 声明网易云通信后台服务，如需保持后台推送，使用独立进程效果会更好。 -->
         <service
             android:name="com.netease.nimlib.service.NimService"
-            android:process=":core"/>
+            android:process=":core" />
 
         <!-- 运行后台辅助服务 -->
         <service
             android:name="com.netease.nimlib.service.NimService$Aux"
-            android:process=":core"/>
+            android:process=":core" />
 
         <!-- 声明网易云通信后台辅助服务 -->
         <service
             android:name="com.netease.nimlib.job.NIMJobService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE"
-            android:process=":core"/>
+            android:process=":core" />
 
         <!-- 网易云通信SDK的监视系统启动和网络变化的广播接收器，用户开机自启动以及网络变化时候重新登录，
             保持和 NimService 同一进程 -->
-        <receiver android:name="com.netease.nimlib.service.NimReceiver"
-            android:process=":core"
-            android:exported="false">
+        <receiver
+            android:name="com.netease.nimlib.service.NimReceiver"
+            android:exported="false"
+            android:process=":core">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
 
         <!-- 网易云通信进程间通信 Receiver -->
-        <receiver android:name="com.netease.nimlib.service.ResponseReceiver"/>
+        <receiver android:name="com.netease.nimlib.service.ResponseReceiver" />
 
         <!-- 网易云通信进程间通信service -->
-        <service android:name="com.netease.nimlib.service.ResponseService"/>
+        <service android:name="com.netease.nimlib.service.ResponseService" />
 
         <!-- 安卓保活配置 -->
         <service
             android:name="com.netease.cosine.core.CosineService"
-            android:process=":cosine">
-        </service>
+            android:process=":cosine"></service>
 
         <receiver
             android:name="com.netease.cosine.target.CosineReceiver"
             android:exported="true"
-            android:process=":cosine">
-        </receiver>
+            android:process=":cosine"></receiver>
 
         <meta-data
             android:name="com.netease.cosine.target"
-            android:value=""/>
+            android:value="" />
         <meta-data
             android:name="com.netease.cosine.target.receiver"
-            android:value="com.netease.nimlib.service.NimReceiver"/>
+            android:value="com.netease.nimlib.service.NimReceiver" />
 
     </application>
 
