--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+
+
     <!-- SDK 权限申明, 第三方 APP 接入时，请将 com.netease.nim.demo 替换为自己的包名 -->
     <!-- 和下面的 uses-permission 一起加入到你的 AndroidManifest 文件中。 -->
     <permission
@@ -108,6 +110,8 @@
         <activity android:name=".ui.activity.InvitationInterviewActivity" />
         <activity android:name="com.netease.nim.uikit.session.activity.P2PMessageActivity" />
         <activity android:name=".ui.activity.settings.ModifyPhoneActivity"/>
+        <activity android:name=".ui.activity.ResumeSearchActivity"/>
+        <activity android:name=".ui.activity.MapSearchActivity"/>
 
         <service
             android:name="com.baidu.location.f"
