--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ android {
         exclude 'assets/nim_keystore2'
 
     }
+        lintOptions {
+            checkReleaseBuilds false
+            // Or, if you prefer, you can continue to check for errors in release builds,
+            // but continue the build even when errors are found:
+            abortOnError false
+        }
 }
 
 
@@ -71,11 +77,11 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.yanzhenjie:permission:1.1.0'
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+//    compile 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     compile files('libs/BaiduLBS_Android.jar')
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+//    compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.github.jdsjlzx:LRecyclerView:1.4.3'
-    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+//    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.androidkun:XTabLayout:1.1.3'
     // 基础功能 (必需)
 //    compile 'com.netease.nimlib:basesdk:3.3.0'
@@ -86,7 +92,6 @@ dependencies {
     // 实时会话服务需要
 //    compile 'com.netease.nimlib:rts:3.3.0'
     compile project(':uikit')
-
 
     //图片选择器
     compile 'com.jph.takephoto:takephoto_library:4.0.3'
