--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -129,6 +129,7 @@
         <activity android:name=".ui.activity.RemarksActivity" />
         <activity android:name=".ui.activity.MailDetailsActivity" />
         <activity android:name=".ui.activity.InterviewContentActivity" />
+        <activity android:name=".ui.activity.TagSelectionActivity" />
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
